--- a/HtmlTypeScriptPort/package.json
+++ b/HtmlTypeScriptPort/package.json
@@ -1,34 +1,50 @@
 {
-  "name": "nekogoo.github.io",
-  "version": "1.0.0",
-  "description": "NekoGoo personal site for content drops",
-  "main": "scripts/app.js",
-  "scripts": {
-    "test": "test type",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" "
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NekoGoo/nekogoo.github.io.git"
-  },
-  "author": "NekoGoo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/NekoGoo/nekogoo.github.io/issues"
-  },
-  "homepage": "https://github.com/NekoGoo/nekogoo.github.io#readme",
-  "dependencies": {
-    "concurrently": "^6.3.0",
-    "lite-server": "^2.6.1",
-    "lodash": "^4.17.21",
-    "typescript": "^4.4.4"
-  },
-  "devDependencies": {
-    "@types/bootstrap": "^5.1.8",
-    "@types/jquery": "^3.5.11",
-    "@types/lodash": "^4.14.176"
-  }
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "start": "webpack serve --config webpack.hot.js",
+        "build": "webpack --config webpack.prod.js",
+        "build:dev": "webpack --config webpack.dev.js"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.16.7",
+        "@babel/preset-env": "^7.16.8",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+        "@types/bootstrap": "^5.1.8",
+        "@types/jquery": "^3.5.13",
+        "@types/lodash": "^4.14.178",
+        "@types/react-dom": "^17.0.11",
+        "@types/webpack": "^5.28.0",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "babel-loader": "^8.2.3",
+        "css-loader": "^6.5.1",
+        "eslint": "^8.7.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "fork-ts-checker-webpack-plugin": "^6.5.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.5.1",
+        "postcss": "^8.4.5",
+        "postcss-loader": "^6.2.1",
+        "postcss-preset-env": "^7.2.3",
+        "prettier": "^2.5.1",
+        "react-refresh": "^0.11.0",
+        "sass": "^1.48.0",
+        "sass-loader": "^12.4.0",
+        "typescript": "^4.5.4",
+        "webpack": "^5.66.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.7.3",
+        "webpack-merge": "^5.8.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "lodash": "^4.17.21",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    }
 }
