--- a/HtmlTypeScriptPort/tsconfig.json
+++ b/HtmlTypeScriptPort/tsconfig.json
@@ -12,10 +12,9 @@
         // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
         /* Language and Environment */
-        "target": "es6" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-        "watch": true,
-        "lib": ["DOM", "ES6"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-        // "jsx": "preserve",                                /* Specify what JSX code is generated. */
+        "target": "es5" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+        // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+        "jsx": "react" /* Specify what JSX code is generated. */,
         // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
         // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
         // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h' */
@@ -26,7 +25,7 @@
         // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
 
         /* Modules */
-        "module": "es2015" /* Specify what module code is generated. */,
+        "module": "commonjs" /* Specify what module code is generated. */,
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
         // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -49,8 +48,8 @@
         // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
         "sourceMap": true /* Create source map files for emitted JavaScript files. */,
         // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If `declaration` is true, also designates a file that bundles all .d.ts output. */
-        "outDir": "./wwwroot/dist" /* Specify an output folder for all emitted files. */,
-        // "removeComments": true,                           /* Disable emitting comments. */
+        // "outDir": "./",                                   /* Specify an output folder for all emitted files. */
+        "removeComments": true /* Disable emitting comments. */,
         // "noEmit": true,                                   /* Disable emitting files from a compilation. */
         // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
         // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types */
@@ -64,7 +63,7 @@
         // "stripInternal": true,                            /* Disable emitting declarations that have `@internal` in their JSDoc comments. */
         // "noEmitHelpers": true,                            /* Disable generating custom helper functions like `__extends` in compiled output. */
         // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
-        // "preserveConstEnums": true,                       /* Disable erasing `const enum` declarations in generated code. */
+        "preserveConstEnums": true /* Disable erasing `const enum` declarations in generated code. */,
         // "declarationDir": "./",                           /* Specify the output directory for generated declaration files. */
 
         /* Interop Constraints */
@@ -76,7 +75,7 @@
 
         /* Type Checking */
         "strict": true /* Enable all strict type-checking options. */,
-        // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied `any` type.. */
+        "noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied `any` type.. */,
         // "strictNullChecks": true,                         /* When type checking, take into account `null` and `undefined`. */
         // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
         // "strictBindCallApply": true,                      /* Check that the arguments for `bind`, `call`, and `apply` methods match the original function. */
@@ -98,8 +97,5 @@
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
-    },
-    "compileOnSave": true,
-    "include": ["Pages/Scripts/**/*"],
-    "exclude": ["node_modules"]
+    }
 }
