--- a/HtmlTypeScriptPort/tsconfig.json
+++ b/HtmlTypeScriptPort/tsconfig.json
@@ -103,7 +103,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "files": ["*.ts", "*.tsx"], // Your TypeScript files extension
+  // pick either 'files' or 'include' | 'exclude' is applied after includes (https://www.typescriptlang.org/tsconfig#include)
   "include": ["src/**/*"],
   "exclude": ["node_modules", "wwwroot", "Scripts"]
 }
